add_subdirectory(airy)
add_subdirectory(complex-system)
add_subdirectory(control)
add_subdirectory(discrete-sampling)
add_subdirectory(json)
add_subdirectory(lorenz)
add_subdirectory(multithreaded-control)
add_subdirectory(ordering)
add_subdirectory(pendulum)
add_subdirectory(script)
add_subdirectory(spring-damper)
